@@ -25,6 +25,7 @@ export(DR)
 export(DRAM)
 export(DREAM)
 export(DREAMzs)
+export(GOF)
 export(M)
 export(MAP)
 export(Metropolis)
@@ -59,6 +60,7 @@ export(getPossibleSamplerTypes)
 export(getPredictiveDistribution)
 export(getPredictiveIntervals)
 export(getSample)
+export(getVolume)
 export(likelihoodAR1)
 export(likelihoodIidNormal)
 export(logSumExp)
